# xlsx_splitter

./: README.md  pyproject.toml
src/xlsx_splitter/: __main__.py  cli.py  splitter.py
